--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
     head for new ideas. The ideas here were what I thought at the time,
     but there is a very good chance that I no longer think that!
 baseurl: "/BlankMindBlog" # the subpath of your site, e.g. /blog
-url: "http://notionparallax.github.io" # the base hostname & protocol for your site
+url: "http://tuksun.github.io" # the base hostname & protocol for your site
 
 #google analytics
 GAcode: UA-52654925-12
