--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Notion Parallax
+title: Automatic Indoor Tracking in Workplaces
 email: ben@notionparallax.co.uk
 description: > # this means to ignore newlines until "baseurl:"
     This is where I write things down. It's the way I make space in my
