--- a/_config.yml
+++ b/_config.yml
@@ -31,17 +31,17 @@ authors:
     linkedInURL:  alexander-lee-b1a16710a" # ignore the https://ca.linkedin.com/in/ part
   annisa:
     display_name: Annisa
-    first_name: Ben
-    last_name: Doherty
-    twitter_username: rollingrizlaz
-    github_username:  notionparallax
-    facebookURL:  RIZZLEEEEEEEE          # ignore the https://www.facebook.com/ part
-    instagramURL: Pigsu_                # ignore the http://instagram.com/ part
+    first_name: Annisa
+    last_name: Rizal
+    twitter_username: forizzle_95
+    github_username:  annisarivera
+    facebookURL:  RIZZLEEEEEEEE         # ignore the https://www.facebook.com/ part
+    instagramURL: annisarivera          # ignore the http://instagram.com/ part
     linkedInURL:  ben-doherty-b2a19359" # ignore the https://ca.linkedin.com/in/ part
   tiara:
     display_name: Tiara
-    first_name: Ben
-    last_name: Doherty
+    first_name: Tiara
+    last_name: Dobbs
     twitter_username: tbag
     github_username:  notionparallax
     facebookURL:  tiara.dobbs          # ignore the https://www.facebook.com/ part
