Add page update

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ kramdown:
 
 authors:
   alex:
-    display_name: Alexander Lee
+    display_name: Alex
     first_name: Alexander
     last_name: Lee
     twitter_username: alexlee #personal twitter account
