--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ _site/
 helpers/experiments/exp7/raw_json/Untitled3.ipynb
 
 helpers/beacon designs/._STICKER DESIGNS [Converted].ai
+
+*.ipynb_checkpoints*
