--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ helpers/experiments/exp7/raw_json/Untitled3.ipynb
 helpers/beacon designs/._STICKER DESIGNS [Converted].ai
 
 *.ipynb_checkpoints*
+frames/
